--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -1,40 +1,136 @@
-<div class="col-md-12 page-content">
-    <div class="caption pull">
+<div class="col-md-12 registration-details">
+    <div class="caption col-md-5 col-md-offset-4 registration-details">
         <span class="caption-subject  font-black bold uppercase">Registration</span>
 
-        <div class="caption-helper font-black font-sm">Please take a moment to complete all of the information
+        <div class="caption-helper font-black font-sm sub-text">Please take a moment to complete all of the information
             below.
         </div>
     </div>
 </div>
+<div class="col-md-12 ">
+    <div class=" col-md-4 col-md-offset-4 ">
 
-    <div class="portlet light form-fit bordered col-md-offset-6 col-md-5 margin-top-30 reg-pannel" >
-
-
-
-        <div class="portlet-title reg-pannel-title" >
-            <div class="caption">
-                <span class="caption-subject  font-black bold uppercase">Registration</span>
-
-                <div class="caption-helper font-black font-sm">Please take a moment to complete all of the information
-                    below.
-                </div>
-            </div>
-
+        <div class="form-group margin-top-20">
+            <label class=" uppercase font-weight"> Maritial Status</label>
+            <select class="form-control input-rounded"><!--ng-model="candidate.maritalStatus"-->
+                <option>Select</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+                <option>Option 4</option>
+                <option>Option 5</option>
+            </select>
         </div>
-        <div class="portlet-body form">
 
-            Registraion
+  <div class="form-group ">
+            <label class=" uppercase font-weight"> Cast</label>
+            <select class="form-control input-rounded"><!--ng-model="candidate.cast"-->
+                <option>Select</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+                <option>Option 4</option>
+                <option>Option 5</option>
+            </select>
+        </div>
 
+
+  <div class="form-group ">
+            <label class=" uppercase font-weight"> Country Living In</label>
+            <select class="form-control input-rounded" ><!--ng-model="candidate.country"-->
+                <option>Select</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+                <option>Option 4</option>
+                <option>Option 5</option>
+            </select>
+        </div>
+
+
+  <div class="form-group ">
+            <label class=" uppercase font-weight"> State Living In</label>
+            <select class="form-control input-rounded" ><!--ng-model="candidate.state"-->
+                <option>Select</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+                <option>Option 4</option>
+                <option>Option 5</option>
+            </select>
+        </div>
+
+
+  <div class="form-group ">
+            <label class=" uppercase font-weight"> City Living In</label>
+            <select class="form-control input-rounded" ><!--ng-model="candidate.city"-->
+                <option>Select</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+                <option>Option 4</option>
+                <option>Option 5</option>
+            </select>
+        </div>
+
+
+  <div class="form-group ">
+            <label class=" uppercase font-weight"> Height</label>
+            <select class="form-control input-rounded" ><!--ng-model="candidate.height"-->
+                <option>Select</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+                <option>Option 4</option>
+                <option>Option 5</option>
+            </select>
+        </div>
+
+
+  <div class="form-group ">
+            <label class=" uppercase font-weight"> Highest Education</label>
+            <select class="form-control input-rounded" ><!--ng-model="candidate.highestEducation"-->
+                <option>Select</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+                <option>Option 4</option>
+                <option>Option 5</option>
+            </select>
+        </div>
+
+
+  <div class="form-group ">
+            <label class=" uppercase font-weight"> Occupation</label>
+            <select class="form-control input-rounded" ><!--ng-model="candidate.occupation"-->
+                <option>Select</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+                <option>Option 4</option>
+                <option>Option 5</option>
+            </select>
+        </div>
+
+        <div class="form-group ">
+
+            <div class="col-md-offset-2 col-md-8">
+                <button type="button" class=" center-block col-md-12 btn red input-rounded" ng-click="vm.registerCandidate()">
+                    Registration
+                </button>
+            </div>
         </div>
     </div>
-
 </div>
 
-<!--<div class="row text-center">-->
-<!--<button type="button" class="btn green" ng-click="vm.open()">Login</button>-->
 
 
 
-<!--</div>-->
+
+
+
+
+
+
+
 
