--- a/src/app/toolbar/login/registrationToolbar.html
+++ b/src/app/toolbar/login/registrationToolbar.html
@@ -9,5 +9,15 @@
 </span>
         </div>
 
+
+    </div>
+    <div class="col-md-12 registration-details">
+        <div class="caption col-md-5 col-md-offset-4 registration-details">
+            <span class="caption-subject  font-black bold uppercase">Registration</span>
+
+            <div class="caption-helper font-black font-sm sub-text">Please take a moment to complete all of the information
+                below.
+            </div>
+        </div>
     </div>
 </div>
