--- a/src/app/main/login/login.css
+++ b/src/app/main/login/login.css
@@ -39,6 +39,8 @@
 
 .registration-details {
     background-color: #fefefe !important;
+    height: 50px !important;
+    /*margin-bottom: 4px;*/
 }
 
 .font-weight {
