--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 ">
+<div class="col-md-12 margin-bottom-30 ">
     <div class=" col-md-4 col-md-offset-4 ">
 
         <div class="form-group margin-top-40">
@@ -107,12 +107,15 @@
 
             <div class="col-md-offset-2 col-md-8">
                 <button type="button" class=" center-block col-md-12 btn red input-rounded" ng-click="vm.registerCandidate()">
-                    Registration
+                    Complete Registration
                 </button>
             </div>
         </div>
     </div>
+
 </div>
+
+
 
 
 
