--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -24,7 +24,7 @@
                         <li ><a href="#news">MATCHES</a></li>
                         <li><a ui-sref="search">SEARCH</a></li>
                         <li><a href="#about">DAILY MATCHES</a></li>
-                        <li><a href="#about">MESSAGES</a></li>
+                        <li><a ui-sref="messages">MESSAGES</a></li>
                         <li><a href="#about">HELP</a></li>
                     </ul>
                 </div>
