--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -6,42 +6,101 @@
 
             <!-- BEGIN PAGE BASE CONTENT -->
 
+
             <div class="row">
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light bordered">
+                    <div class="portlet light bordered border-rounded">
                         <div class="portlet-title">
                             <div class="caption ">
                                 <!--<i class="icon-settings font-red-sunglo"></i>-->
                                 <span class="caption-subject bold uppercase"> Regular Search</span>
                             </div>
-                            <div class="actions">
-                                <div class="btn-group">
-                                    <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
-                                        <i class="fa fa-angle-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"> </li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
-                                        </li>
-                                    </ul>
+                            <!--
+                                                        <div class="actions">
+                                                            <div class="btn-group">
+                                                                <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
+                                                                    <i class="fa fa-angle-down"></i>
+                                                                </a>
+                                                                <ul class="dropdown-menu pull-right">
+                                                                    <li>
+                                                                        <a href="javascript:;">
+                                                                            <i class="fa fa-pencil"></i> Edit </a>
+                                                                    </li>
+                                                                    <li>
+                                                                        <a href="javascript:;">
+                                                                            <i class="fa fa-trash-o"></i> Delete </a>
+                                                                    </li>
+                                                                    <li>
+                                                                        <a href="javascript:;">
+                                                                            <i class="fa fa-ban"></i> Ban </a>
+                                                                    </li>
+                                                                    <li class="divider"> </li>
+                                                                    <li>
+                                                                        <a href="javascript:;"> Make admin </a>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </div>
+                            -->
+                        </div>
+
+
+                        <div class="portlet-body form">
+                            <label class=" uppercase font-weight"> Age</label>
+
+                            <div class="form-inline" role="form">
+                                <div class="form-group ">
+                                    <select class="form-control input-rounded col-lg-5">
+                                        <!--ng-model="candidate.maritalStatus"-->
+                                        <option>Select</option>
+                                        <option>21</option>
+                                        <option>22</option>
+                                        <option>23</option>
+                                        <option>24</option>
+                                        <option>25</option>
+                                    </select>
+                                </div>
+                                to
+                                <div class="form-group">
+                                    <select class="form-control input-rounded">
+                                        <!--ng-model="candidate.maritalStatus"-->
+                                        <option>Select</option>
+                                        <option>22</option>
+                                        <option>23</option>
+                                        <option>24</option>
+                                        <option>25</option>
+                                        <option>26</option>
+                                    </select>
+                                </div>
+
+                                <div class="pull-right">
+                                    <div class="form-group  ">
+                                        <select class="form-control input-rounded col-lg-5">
+                                            <!--ng-model="candidate.maritalStatus"-->
+                                            <option>Select</option>
+                                            <option>170cm 5.7 feet</option>
+                                            <option>150cm 5.0 feet</option>
+                                            <option>170cm 5.7 feet</option>
+                                            <option>170cm 5.7 feet</option>
+                                            <option>160cm 5.3 feet</option>
+                                        </select>
+                                    </div>
+                                    to
+                                    <div class="form-group">
+                                        <select class="form-control input-rounded">
+                                            <!--ng-model="candidate.maritalStatus"-->
+                                            <option>Select</option>
+                                            <option>170cm 5.7 feet</option>
+                                            <option>150cm 5.0 feet</option>
+                                            <option>170cm 5.7 feet</option>
+                                            <option>170cm 5.7 feet</option>
+                                            <option>160cm 5.3 feet</option>
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="portlet-body form">
+
 
                         </div>
                     </div>
@@ -57,6 +116,7 @@
                     <a href="javascript:;" class="btn dropdown-toggle" data-toggle="dropdown">
                         <i class="icon-settings"></i>
                     </a>
+
                     <div class="dropdown-menu theme-panel pull-right dropdown-custom hold-on-click">
                         <div class="row">
                             <div class="col-md-4 col-sm-4 col-xs-12">
@@ -134,8 +194,6 @@
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BREADCRUMB -->
-
-
 
 
         <!-- END PAGE BASE CONTENT -->
