--- a/src/app/navigation/search/searchNavigation.html
+++ b/src/app/navigation/search/searchNavigation.html
@@ -1,11 +1,11 @@
 <div class="page-sidebar-wrapper">
     <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px">
 
-        <div class="row" style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 9px;margin-top:10px">
+        <div class="row border-rounded-top" style="background-color:#f9fafc;height:37px;padding: 9px 14px 9px 9px;margin-top:10px">
             <div class="col-md-12 bold" style="text-align: center;">My Saved Searches</div>
         </div>
 
-        <div class="row" style="background-color:white;padding: 9px 14px 9px 9px;">
+        <div class="row border-rounded-bottom" style="background-color:white;padding: 9px 14px 9px 9px;">
             <div class="col-md-12 " style="border-bottom: 1px solid #ddd;padding-bottom: 10px;padding-top: 10px">
                 <div class="row">
                     <div class="col-md-8">
@@ -43,15 +43,15 @@
 
         </div>
 
-        <div class="row" style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 9px;margin-top:10px">
+        <div class="row border-rounded-top" style="background-color:#f9fafc;height:37px;padding: 9px 14px 9px 9px;margin-top:10px">
             <div class="col-md-12 bold" style="text-align: center;">Search by ID</div>
         </div>
 
-        <div class="row" style="background-color:white;padding: 9px 14px 9px 9px;">
+        <div class="row border-rounded-bottom" style="background-color:white;padding: 9px 14px 9px 9px;">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Enter ID">
+                <input type="text" class="form-control input-rounded-pratial-left" placeholder="Enter ID">
                                                     <span class="input-group-btn">
-                                                        <button class="btn red" type="button">Go</button>
+                                                        <button class="btn red input-rounded-pratial-right" type="button">Go</button>
                                                     </span>
             </div>
 
